Switch to OpenJDK10 in Gradle builds
Oracle JDK10 is EOL and is no longer available for download.
So switch to OpenJDK10 in Gradle builds.