@@ -1,10 +1,12 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
         classpath files('gradle/witness/gradle-witness.jar')
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
     }
 }
 
@@ -13,6 +15,9 @@ apply plugin: 'application'
 apply plugin: 'maven'
 apply plugin: 'witness'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'com.google.osdetector'
+
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
 group = 'network.bisq'
 version = '0.8.0-SNAPSHOT'
@@ -36,6 +41,7 @@ sourceSets.main.resources.srcDirs += ['src/main/java'] // to copy fxml and css f
 
 repositories {
     jcenter()
+    mavenCentral()
     maven { url 'https://jitpack.io' }
     maven { url 'https://raw.githubusercontent.com/JesusMcCloud/tor-binary/master/release/' }
     maven { url 'https://dl.bintray.com/jerady/maven' }
@@ -55,6 +61,11 @@ dependencies {
     compile 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9.1.2'
     compile 'com.googlecode.jcsv:jcsv:1.4.0'
     compile 'com.github.sarxos:webcam-capture:0.3.12'
+    compile "org.openjfx:javafx-base:11:$platform"
+    compile "org.openjfx:javafx-graphics:11:$platform"
+    compile "org.openjfx:javafx-controls:11:$platform"
+    compile "org.openjfx:javafx-fxml:11:$platform"
+    compile "org.openjfx:javafx-swing:11:$platform"
 
 
     compileOnly 'org.projectlombok:lombok:1.18.2'
@@ -70,6 +81,23 @@ dependencies {
     testCompile 'com.natpryce:make-it-easy:4.0.1'
     testCompileOnly 'org.projectlombok:lombok:1.18.2'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+run {
+    doFirst {
+        jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls'
+        ]
+    }
 }
 
 test {
